# Location

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_CN.md  main.cpp  更新日志.md
common/: Accelerometer.cpp  Accelerometer.h  KalmanFilter.cpp  KalmanFilter.h  Quaternion.cpp  Quaternion.h
config/: CMakeLists.txt  Config.cpp  Config.h
config/config_files/: Android.config
docs/: SensorDataChecking.md  SomeTestCaseResults.md  apiCallDetails.md  sensors.md  trainingStopDetectModel.md  workflow.md
location/: CMakeLists.txt  Location.cpp  Location.h
math/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  KalmanFilter.cpp  KalmanFilter.h  LPF.cpp  LPF.h  Optimizer.cpp  Optimizer.h  Quaternions.cpp  Quaternions.h
models/: AHRS.cpp  AHRS.h  CMakeLists.txt  StopDetection.cpp  StopDetection.h  StrapdownAHRS.cpp  StrapdownAHRS.h  XgboostDetector.cpp  XgboostDetector.h
rtk/: RtkLocation.cpp  RtkLocation.h
sensor/: Accelerometer.cpp  Accelerometer.h  CMakeLists.txt  Compass.cpp  Compass.h  GPS.cpp  GPS.h  Gravity.cpp  Gravity.h  Gyroscope.cpp  Gyroscope.h  Magnetometer.cpp  Magnetometer.h  Sensor.cpp  Sensor.h
system/: CMakeLists.txt  Parameters.cpp  Parameters.h  Status.cpp  Status.h
test/: CMakeLists.txt  TestCalibration.cpp  TestCalibration.h  TestLocation.cpp  TestLocation.h  TestXgboostDetector.cpp  TestXgboostDetector.h
test/data/: EEWalk2.csv  McLaneWalk.csv  Sensor_record_20151030_105902_AndroSensor.csv  Sensor_record_20151030_110329_AndroSensor.csv  Sensor_record_20151030_110417_AndroSensor.csv  Sensor_record_20151030_110448_AndroSensor.csv  Sensor_record_20151030_110521_AndroSensor.csv  Sensor_record_20151030_110553_AndroSensor.csv
test/utils/: DataFormat.cpp  DataFormat.h  ReadSensor.log.py
utils/: CMakeLists.txt  Tools.cpp  Tools.h
